--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
+    "semantic-ui-react": "^0.82.5",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
