--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
     "react-table": "^6.8.6",
+    "semantic-ui-react": "^0.83.0",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
