--- a/ops/k8s/server.yaml
+++ b/ops/k8s/server.yaml
@@ -1,41 +1,41 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: dashboard-server
+    name: {{ prefix }}-dash-server
 spec:
   replicas: 1
   selector:
-    app: dashboard-server
+    app: {{ prefix }}-dash-server
   template:
     metadata:
       labels:
-        app: dashboard-server
+        app: {{ prefix }}-dash-server
     spec:
       containers:
-      - name: dashboard-server
+      - name: {{ prefix }}-dash-server
         image: localhost:5000/near/dash-server
         ports:
         - containerPort: 5000
         env:
         - name: NEAR_COLLECTOR_SERVER_REDIS_HOST
-          value: dashboard-redis
+          value: {{ prefix }}-dash-redis
 
 ---
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: dashboard-redis
+  name: {{ prefix }}-dash-redis
 spec:
   replicas: 1
   selector:
-    app: dashboard-redis
+    app: {{ prefix }}-dash-redis
   template:
     metadata:
       labels:
-        app: dashboard-redis
+        app: {{ prefix }}-dash-redis
     spec:
       containers:
-      - name: dashboard-redis
+      - name: {{ prefix }}-dash-redis
         image: redis:5.0.0-alpine
         ports:
         - containerPort: 6379
@@ -44,7 +44,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dashboard-server
+  name: {{ prefix }}-dash-server
 spec:
   clusterIP: None
   ports:
@@ -52,13 +52,13 @@ spec:
     targetPort: 5000
     protocol: TCP
   selector:
-    app: dashboard-server
+    app: {{ prefix }}-dash-server
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: dashboard-redis
+  name: {{ prefix }}-dash-redis
 spec:
   clusterIP: None
   ports:
@@ -66,4 +66,5 @@ spec:
     targetPort: 6379
     protocol: TCP
   selector:
-    app: dashboard-redis
+    app: {{ prefix }}-dash-redis
+
