--- a/ops/k8s/minikube.yaml
+++ b/ops/k8s/minikube.yaml
@@ -14,3 +14,7 @@ spec:
         backend:
           serviceName: {{ prefix }}-dash-server
           servicePort: 5000
+      - path: /webui/
+        backend:
+          serviceName: {{ prefix }}-dash-webui
+          servicePort: 80
