--- a/ops/k8s/minikube.yaml
+++ b/ops/k8s/minikube.yaml
@@ -1,7 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ prefix }}-dash-server
+  name: dash-server
+  namespace: {{ namespace }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     # https://github.com/kubernetes/ingress-nginx/issues/1567
@@ -12,9 +13,9 @@ spec:
       paths:
       - path: /dashboard-server/
         backend:
-          serviceName: {{ prefix }}-dash-server
+          serviceName: dash-server
           servicePort: 5000
       - path: /webui/
         backend:
-          serviceName: {{ prefix }}-dash-webui
+          serviceName: dash-webui
           servicePort: 80
