--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -27,5 +27,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://192.168.99.100/dashboard-server/"
+  "proxy": "http://192.168.99.100/dashboard-server/",
+  "homepage": "./"
 }
