--- a/ops/k8s/minikube.yaml
+++ b/ops/k8s/minikube.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: dash-server
+  name: dash
   namespace: {{ namespace }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
