--- a/server/e2e-tests/node/Cargo.toml
+++ b/server/e2e-tests/node/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["haydn dufrene <haydn.dufrene@gmail.com>"]
 [dependencies]
 env_logger = "^0.5.13"
 slog = "^2"
+slog_derive = "^0"
 substrate-telemetry = { git = "https://github.com/azban/substrate", branch = "fix/telemetry-wait-for-logger"}
