--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-table": "^6.8.6",
     "semantic-ui-react": "^0.83.0",
@@ -27,6 +28,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://192.168.99.100/dashboard-server/",
+  "proxy": "http://localhost:5000",
   "homepage": "./"
 }
