--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -1,10 +1,8 @@
 {
-  "homepage": "https://marcinbodnar.github.io/near-debugger-ui",
   "name": "dashboard",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
@@ -16,8 +14,6 @@
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,5 +28,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://studio.nearprotocol.com/block-explorer-api"
+  "proxy": "http://localhost:5000"
 }
